# genesis_tui

./: .gitignore  Cargo.toml  README.md  fix_controller.sh  fix_engine.sh  fix_engine_mod.sh  fix_engine_mod2.sh  fix_engine_mod3.sh  fix_main.sh  fix_main_for_renderer_args.sh  fix_main_threading.sh  fix_renderer.sh  fix_tests.sh  generate_engine.sh  generate_physics.sh  generate_ui.sh  patch.py  patch2.py  patch_boids.sh  patch_controller.sh  patch_engine.sh  patch_entity.sh  patch_main.sh  patch_methods.sh  patch_phenomena.sh  patch_ping.sh  patch_ping_ctrl.rs  patch_ping_ent.rs  patch_ping_internal.rs  patch_render_effect.rs  patch_renderer.sh  patch_tick.sh  really_fix_patch.sh  replace_main.rs  replace_match.rs  replace_rightclick.rs  replace_tick.rs  update_tick_internal.rs
docs/: 01_architecture.md  02_physics.md  03_user_guide.md
src/: lib.rs  main.rs
src/constants/: colors.rs  effects.rs  mod.rs  physics.rs
src/core/: mod.rs  visuals.rs
src/core/engine/: controller.rs  mod.rs
src/core/entity/: mod.rs
src/core/genetics/: mod.rs
src/core/grid/: mod.rs
src/core/phenomena/: mod.rs
src/ui/: mod.rs  renderer.rs
src/utils/: color.rs  fence.rs  fx.rs  gradient.rs  mod.rs  physics.rs  projection.rs  telemetry.rs
tests/: effects_core.rs  engine_core.rs  entity_core.rs  fence_core.rs  genetics_core.rs  grid_core.rs  physics_core.rs  threading_core.rs  utils_core.rs  visuals_core.rs
