[package]
name = "genesis_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
glam = "0.32.1"
rand = "0.8.5"
ratatui = "0.29"
rusqlite = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
